--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/node": "^12.7.11",
         "@types/qrcode": "^1.3.4",
         "aes-js": "^3.1.2",
+        "browserify-css": "^0.15.0",
         "babel-preset-es2015": "^6.24.1",
         "qrcode": "^1.4.2",
         "tsify": "^4.0.1",
